# forgeward

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  evidence-pack.md  provider-abstraction.md  roadmap.md  threat-model.md
site/: Dockerfile  app.js  index.html  nginx.conf  styles.css
skills/forgeward-team/: SKILL.md
skills/forgeward-team/agents/: openai.yaml
skills/forgeward-team/references/: lifecycle.md
src/forgeward/: __init__.py  __main__.py  checks.py  cli.py  config.py  context.py  models.py  orchestrator.py  prompts.py  reporting.py  security.py  state.py
src/forgeward/providers/: __init__.py  base.py  demo.py  litellm_adapter.py  openai_compatible.py  url_policy.py
templates/default/: .gitignore  firm.yaml
templates/default/prompts/: architect.md  builder.md  designer.md  product.md  release.md  reviewer.md  scrum-master.md  security.md  tester.md
tests/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_context.py  test_feedback_routing.py  test_ledger_integrity.py  test_litellm_adapter.py  test_main.py  test_orchestrator.py  test_prompts.py  test_providers.py  test_rendering_security.py  test_role_capabilities.py  test_security.py  test_state.py
